@@ -354,6 +354,10 @@ Extension modules
 Library
 -------
 
+- Various configure methods of Tkinter have been stream-lined, so
+  that tag_configure, image_configure, window_configure now return
+  a dictionary when invoked with no argument.
+
 - Importing the readline module now no longer has the side effect of
   calling setlocale(LC_CTYPE, "").  The initial "C" locale, or
   whatever locale is explicitly set by the user, is preserved.  If you
